# vcsn

./: .clang-format  .clang-tidy  .dir-locals.el  .gitignore  .gitlab-ci.yml  AUTHORS.md  Dockerfile  Doxyfile  FlexLexer.h  Makefile.am  NEWS.md  NEWS.txt  README.md  README.txt  TODO.txt  bench-lightest.py  bootstrap  common.mk  configure.ac  internship.txt
tests/: Makefile.am  bench  checker  local.mk  score
tests/benchmarks/: README.md  evaluate.cc  letters-of.cc
tests/demo/: README.md  compose.cc  compose.chk  conjunction.cc  conjunction.chk  generators.cc  generators.chk  local.mk  minimize.cc  minimize.chk  operators.cc  operators.chk  prod-eval.cc  prod-eval.chk  property.cc  property.chk  sms2fr-dyn.cc  sms2fr-static.cc  sms2fr-tests.py  sms2fr.chk  sms2fr.py
tests/python/: accessible.py  add.py  aut-to-exp.py  automaton.py  blind.py  chain.py  compare.py  complement.py  complete.py  compose.py  compose2.py  concatenate.py  conjugate.py  conjunction.py  conjunction2.py  constant-term.py  context.py  de-bruijn.py  demangle.py  derivation.py  determinize.py  difference.py  divide.py  double-ring.py  efsm.py  eliminate-state.py  enumerate.py  evaluate.py  expand.py  expansion.py  expression.py  factory.py  filter.py  first-order.py  focus.py  has-bounded-lag.py  has-lightening-cycle.py  has-negative-cycle.py  has-twins-property.py  infiltrate.py  (+70 more)
tests/rat/: b.rat  br.rat  cat.chk  common-weights.rat  common.rat  interface.rat  invalid-weight-set.rat  local.mk  pprat.cc  q.rat  qr.rat  qrr.rat  rat  rat.rat  test.rat  transpose.rat  tuple.rat  utf-8.rat  vcsn-transpose.chk  wrong-weight-set.rat  xfail1.rat  xfail2.rat  xfail3.rat  z.rat  zr.rat  zrr.rat
tests/rat_exp/: local.mk  rat_exp.pl  rat_exp.test  test.rat_exp
tests/tafkit/: accessible.chk  are-equivalent.chk  are-isomorphic.chk  aut-to-exp.chk  aut_to_exp.chk  cat.chk  chain.chk  complement.chk  complete.chk  concatenate.chk  constant-term.chk  de-bruijn.chk  derivation.chk  derive.chk  determinize.chk  difference.chk  double-ring.chk  efsm.chk  enumerate.chk  eps-removal.chk  eval.chk  evaluate.chk  expand.chk  fado.chk  fsm.chk  grail.chk  help.chk  infiltrate.chk  infiltration.chk  is-ambiguous.chk  is-complete.chk  is-deterministic-fail.chk  is-deterministic.chk  is-normalized.chk  is-proper.chk  is-valid.chk  is_complete.chk  ladybird.chk  left-mult.chk  lift.chk  (+19 more)
tests/tools/: diagnose.chk  eval.chk  evaluate.chk  help.chk  local.mk
tests/unit/: .gitignore  Makefile.am  accessible.chk  aut_char_z_lae.cc  aut_char_z_lae.chk  aut_char_z_lal.cc  aut_char_z_lal.chk  aut_char_z_lau.cc  aut_char_z_lau.chk  aut_char_z_law.cc  aut_char_z_law.chk  aut_lal_char_z.cc  aut_lal_char_z.chk  aut_lao_z.cc  aut_lao_z.chk  aut_lau_char_z.cc  aut_lau_char_z.chk  aut_lau_z.cc  aut_lau_z.chk  aut_law_char_z.cc  aut_law_char_z.chk  aut_to_exp.chk  concat.cc  concat.chk  context.cc  context.chk  cross.cc  cross.chk  de-bruijn.chk  determinize.cc  determinize.chk  distance.cc  distance.chk  dyn.cc  dyn.chk  eps-removal.cc  eps-removal.chk  eval.cc  eval.chk  function_property.cc  (+44 more)
vcsn/: Makefile.am  empty.hh  fwd.hh  local.mk
vcsn/algos/: a-star.hh  accessible.hh  add.hh  are-equivalent.hh  are-isomorphic.hh  aut-to-exp.hh  aut_to_exp.hh  bellman-ford.hh  blind.hh  cerny.hh  chain.hh  compare-automaton.hh  compare-expression.hh  compare.hh  complement.hh  complete.hh  compose-expression.hh  compose-ranked.hh  compose.hh  concatenate.hh  conjugate.hh  conjunction-expression.hh  conjunction-ranked.hh  conjunction.hh  constant-term.hh  constant.hh  copy.hh  daut.hh  de-bruijn.hh  derivation.hh  derive.hh  derived-term.hh  determinize-expansion.hh  determinize.hh  dijkstra-node.hh  dijkstra.hh  distance.hh  divide.hh  divkbaseb.hh  dot.hh  (+137 more)
vcsn/alphabets/: char.hh  setalpha.hh  string.hh
vcsn/concepts/: automaton.hh
vcsn/core/: automaton-decorator.hh  automaton.hh  automatonset.hh  crange.hh  entryiter.hh  expression-automaton.hh  function-property.hh  fwd.hh  join-automata.hh  join.hh  kind.hh  lazy-tuple-automaton.hh  local.mk  mutable-automaton.hh  mutable_automaton.hh  name-automaton.hh  partition-automaton.hh  permutation-automaton.hh  polystate-automaton.hh  property-cache.hh  property.hh  ratexp-automaton.hh  state-bimap.hh  subset-automaton.hh  transition-map.hh  transition.hh  tuple-automaton.hh  xdot-automaton.hh
vcsn/ctx/: abstract_context.hh  char.hh  char_b_lal.hh  char_b_law.hh  char_br_lal.hh  char_br_lau.hh  char_br_law.hh  char_z_lae.hh  char_z_lal.hh  char_z_lau.hh  char_z_law.hh  char_z_min_lal.hh  char_z_min_law.hh  char_zmin_lal.hh  char_zmin_law.hh  char_zr_lal.hh  char_zr_law.hh  char_zrr_lal.hh  char_zrr_law.hh  context.hh  ctx.hh  fwd.hh  genset-labelset.hh  instantiate.hh  lal.hh  lal_char.hh  lal_char_b.hh  lal_char_br.hh  lal_char_q.hh  lal_char_r.hh  lal_char_z.hh  lal_char_zmin.hh  lal_char_zr.hh  lal_char_zrr.hh  lan_char.hh  lan_char_b.hh  lan_char_r.hh  lan_char_z.hh  lan_char_zr.hh  lao_br.hh  (+24 more)
vcsn/dyn/: algos.hh  algos.hxx  automaton.hh  cast.hh  context-parser.hh  context-printer.hh  context-visitor.hh  context.hh  expansion.hh  expression.hh  expressionset.hh  expressionset.hxx  fwd.hh  label.hh  name.hh  polynomial.hh  polynomialset.hh  ratexp.hh  ratexpset.hh  ratexpset.hxx  signature-printer.hh  translate.hh  type-ast.hh  types.hh  value.hh  weight.hh  weightset.hh
vcsn/factory/: de-bruijn.hh  de_bruijn.hh  divkbaseb.hh  double-ring.hh  ladybird.hh  random.hh  u.hh
vcsn/io/: driver.cc  driver.hh  lexer.ll  local.mk  parse-rat-exp.txt  parse-rat-exp.yy
vcsn/labelset/: equalto-labelset.hh  fwd.hh  genset-labelset.hh  hasher-labelset.hh  labelset.hh  letterset.hh  nullableset.hh  oneset.hh  stateset.hh  tupleset.hh  word-polynomialset.hh  wordset.hh
vcsn/misc/: algorithm.hh  attributes.hh  backtracker.hh  bimap.hh  builtins.hh  cassert.hh  cast.hh  configuration.hh  const_traits.hh  container.hh  crange.hh  cross.hh  debug-level.hh  deque.hh  direction.hh  dynamic_bitset.hh  echo.hh  empty.hh  epsilon-profile.hh  escape.hh  export.hh  fado.hh  fibonacci_heap.hh  filter.hh  (+54 more)
(+1146 files in other folders)
